<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newsBackgroundColor"
    android:orientation="vertical"
    tools:context=".presentation.MainActivity">

    <TextView
        android:id="@+id/internetConnectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="TextView"
        android:textSize="18sp"
        android:visibility="gone" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="18dp"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/general"
                style="@style/categoriesChips"
                android:text="@string/general" />

            <com.google.android.material.chip.Chip
                android:id="@+id/business"
                style="@style/categoriesChips"
                android:text="@string/business" />

            <com.google.android.material.chip.Chip
                android:id="@+id/entertainment"
                style="@style/categoriesChips"
                android:text="@string/entertainment" />

            <com.google.android.material.chip.Chip
                android:id="@+id/health"
                style="@style/categoriesChips"
                android:text="@string/health" />

            <com.google.android.material.chip.Chip
                android:id="@+id/science"
                style="@style/categoriesChips"
                android:text="@string/science" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sports"
                style="@style/categoriesChips"
                android:text="@string/sports" />

            <com.google.android.material.chip.Chip
                android:id="@+id/technology"
                style="@style/categoriesChips"
                android:text="@string/technology" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/reloadNews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="18dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/newsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>